--- a/onnext/index.html
+++ b/onnext/index.html
@@ -85,7 +85,7 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner-01.jpg')">
+	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner-02.jpg')">
 		<div class="heading">
 			<h1>Welcome to Owen Page</h1>			
 			<h3 class="cd-headline clip is-full-width">
@@ -94,7 +94,8 @@
 					<b class="is-visible">Web Developer</b>
 					<b>Web Design</b>
 					<b>Basketball</b>
-					<b>Shiba Doggy</b>
+					<b>Cute Doggy</b>
+					<b>Gaming</b>
 				</span>
 				<div class="btn-ber">
 					<a class="get_btn hvr-bounce-to-top js-scroll-trigger" href="#about">Get started</a>
@@ -111,7 +112,7 @@
                     <div class="message-box">                        
                         <h2>I'm Owen5566!</h2>
                         <p> 台中人，人生23年都在台中生活，高中走路十分鐘，大學騎車十分鐘，現在上班地點騎腳踏車大概也不到十分鐘。高中時資訊課程的VB教學開啟了我對程式的興趣，大學選擇了資訊管理學系就讀。除了必修的C語言、資料結構、資料庫、系統分析等等，我也選修了其他不同的課程：Java和App開發、C#、R語言和資料分析、區域網路等等。在修課的過程中，我很喜歡遇到問題時思考的過程以及最後問題解決的成就感，也喜歡和同學一起討論問題。 </p>
-						<p> 除了程式，還喜歡吉他，獨立樂團，籃球，電動。最近的目標是讓自己成為一個獨當一面的工程師以及拿到第一份薪水換手機避免玩跑跑卡丁車卡成狗</p>
+						<p> 除了程式，還喜歡吉他，獨立樂團，籃球，電動。最近的目標是讓自己成為一個獨當一面的工程師以及拿到第一份薪水換手機避免玩跑跑卡丁車卡成狗。</p>
 
                         <a href="#contact" class="sim-btn hvr-bounce-to-top js-scroll-trigger"><span>Contect Me</span></a>
                     </div><!-- end messagebox -->
@@ -511,7 +512,7 @@
         <div class="container">
             <div class="section-title text-center">
                 <h3>Contact</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>say something to me...</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -559,12 +560,12 @@
 				<a href="#"><img src="images/logo.png" alt="" /></a>
                 <div class="footer-center">
                     <p class="footer-links">
-                        <a href="#">Home</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Pricing</a>
-                        <a href="#">About</a>
-                        <a href="#">Faq</a>
-                        <a href="#">Contact</a>
+                        <a href="#home">Home</a>
+                        <a href="#blog">Blog</a>
+                        <a href="#pricing">Pricing</a>
+                        <a href="#about">About</a>
+                        <a href="#team">Shiba</a>
+                        <a href="#contect">Contact</a>
                     </p>
                     <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">OnNext</a> Design By : 
 					<a href="https://html.design/">html design</a></p>
