小調整，新增README

--- a/onnext/index.html
+++ b/onnext/index.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="section-title text-center">
                 <h3>Services</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.</p>
+                <p>看圖說故事</p>
             </div><!-- end title -->
 
             <div class="row">
@@ -141,7 +141,7 @@
 							<i class="flaticon-seo"></i>
 						</div>
 						<h2>Web Development</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p>正在學習關於網頁工程師的一切</p>
 					</div>
                 </div><!-- end col -->
                 <div class="col-md-4">
@@ -150,7 +150,7 @@
 							<i class="flaticon-development"></i>
 						</div>
 						<h2>Responsive Design</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<p>這個網站也有RWD喔</p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -197,7 +197,7 @@
 		<div class="container">
 			<div class="section-title text-center">
                 <h3>SomePicture</h3>
-                <p>這欄原本作品集，很不巧我沒有。所以放點照片</p>
+                <p>這欄原本作品集，但...。所以放點照片</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
